--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: black;
+}
 h1{
     text-align: center;
 }
@@ -9,4 +12,7 @@ h1{
     text-align: center;
     padding: auto;
     margin: auto;
+}
+.space{
+    margin-top: 10px;
 }
