--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,9 @@ h1{
     position: absolute;
     right: 0;
 }
+.background{
+    background-image: url("../img/cbq.jpg");
+    background-position: center;
+    background-size: 500px;
+    background-repeat: no-repeat;
+}
