--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body{
     background-color: black;
+    background-image: url("../img/cbq.jpg");
+    background-position: center;
+    background-size: 600px;
+    background-repeat: no-repeat;
+
 }
 h1{
     text-align: center;
@@ -20,9 +25,9 @@ h1{
     position: absolute;
     right: 0;
 }
-.background{
+/*.background{
     background-image: url("../img/cbq.jpg");
     background-position: center;
     background-size: 500px;
     background-repeat: no-repeat;
-}
+}*/
