--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ body{
 h1{
     text-align: center;
 }
+footer {
+    position: relative;
+    bottom: 0;
+}
 .maps{
     padding: auto;
     margin: auto;
