--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,14 @@ body{
     background-repeat: no-repeat;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-
 }
 h1{
     text-align: center;
 }
 footer {
-    position: relative;
+    position: fixed;
     bottom: 0;
+    width: 100%;
 }
 .maps{
     padding: auto;
@@ -34,9 +31,3 @@ footer {
     position: absolute;
     right: 0;
 }
-/*.background{
-    background-image: url("../img/cbq.jpg");
-    background-position: center;
-    background-size: 500px;
-    background-repeat: no-repeat;
-}*/
